@@ -1,4 +1,4 @@
-# $Id: 00default.rb,v 1.57 2007-07-17 14:30:30 yanagita Exp $
+# $Id: 00default.rb,v 1.58 2008-06-25 11:15:32 hsbt Exp $
 # Copyright (C) 2002-2003 TAKEUCHI Hitoshi <hitoshi@namaraii.com>
 
 #==============================
@@ -169,11 +169,9 @@ add_footer_proc {
 }
 
 def hiki_footer
-  <<EOS
-Generated by <a href="http://hikiwiki.org/">Hiki</a> #{HIKI_VERSION} (#{HIKI_RELEASE_DATE}).<br>
-Powered by <a href="http://www.ruby-lang.org/">Ruby</a> #{RUBY_VERSION} (#{RUBY_RELEASE_DATE})#{if /ruby/i =~ ENV['GATEWAY_INTERFACE'] then ' with <a href="http://www.modruby.net/">mod_ruby</a>' end}.<br>
-Founded by #{@conf.author_name.escapeHTML}.<br>
-EOS
+  s = %Q|Generated by <a href="http://hikiwiki.org/">Hiki</a> #{HIKI_VERSION} (#{HIKI_RELEASE_DATE}).<br>\nPowered by <a href="http://www.ruby-lang.org/">Ruby</a> #{RUBY_VERSION}|
+  s << %Q|-p#{RUBY_PATCHLEVEL}| rescue ''
+  s << %Q| (#{RUBY_RELEASE_DATE})#{if /ruby/i =~ ENV['GATEWAY_INTERFACE'] then ' with <a href="http://www.modruby.net/">mod_ruby</a>' end}.<br>\nFounded by #{@conf.author_name.escapeHTML}.<br>\n|
 end
 
 #===== edit_proc
